Applying react Link to Home and Log In navbar

--- a/public/style.css
+++ b/public/style.css
@@ -104,3 +104,9 @@ main {
   height: 50px;
   width: 50px;
 }
+
+.nav-list-links a{
+  /* Link is viewed as container */
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+}
