--- a/public/style.css
+++ b/public/style.css
@@ -39,6 +39,7 @@ body {
 }
 
 main {
+  display: flex;
   flex: 1 0 auto;
 }
 
@@ -47,14 +48,18 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  width: 100%;
+  /* height: 100%; */
+  /* flex:1 0 auto */
 }
 
 .create-form {
   display: flex;
   flex-direction: column;
-  height: 100%;
-  width: 50%;
+  /* height: 100%;
+  width: 50%; */
+  height: 200px;
+  width: 15%;
   align-items: center;
   justify-content: space-evenly;
 }
@@ -105,7 +110,7 @@ main {
   width: 50px;
 }
 
-.nav-list-links a{
+.nav-list-links a {
   /* Link is viewed as container */
   text-decoration: none;
   color: rgb(255, 255, 255);
