--- a/public/style.css
+++ b/public/style.css
@@ -43,14 +43,22 @@ main {
   flex: 1 0 auto;
 }
 
-.login {
+.login,
+.signup {
   /* Need to figure out the height of this */
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
   /* height: 100%; */
   /* flex:1 0 auto */
+}
+
+.form-title {
+  font-weight: bolder;
+  font-size: 22px;
+  margin-bottom: 1rem;
 }
 
 .create-form {
@@ -59,9 +67,10 @@ main {
   /* height: 100%;
   width: 50%; */
   height: 200px;
-  width: 15%;
+  width: 18%;
   align-items: center;
   justify-content: space-evenly;
+  border: solid;
 }
 
 .footer-container {
