--- a/public/style.css
+++ b/public/style.css
@@ -66,7 +66,7 @@ main {
   flex-direction: column;
   /* height: 100%;
   width: 50%; */
-  height: 200px;
+  height: 220px;
   width: 18%;
   align-items: center;
   justify-content: space-evenly;
@@ -123,4 +123,8 @@ main {
   /* Link is viewed as container */
   text-decoration: none;
   color: rgb(255, 255, 255);
+}
+
+.redirect-link {
+  margin-top: 1rem;
 }
