--- a/public/style.css
+++ b/public/style.css
@@ -73,20 +73,9 @@ main {
   border: solid;
 }
 
-.footer-container {
-  /* margin-top: auto; */
-  flex-shrink: 0;
-}
-
-/* .footer-container{
-  margin-top: auto;
-  display: flex;
-  flex-direction: column;
-}
-*/
-
 .footer-info {
   display: flex;
+  height: 100%;
 }
 
 .about-us,
