--- a/public/style.css
+++ b/public/style.css
@@ -125,6 +125,7 @@ main {
 
 #your-profile .title {
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
